# auto-ryzenadj

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  auto-ryzenadj-applet.desktop  auto-ryzenadj.conf.example  auto-ryzenadj.conf.example2  auto-ryzenadj.py  auto-ryzenadjctl.py  auto-ryzenadjd-openrc  auto-ryzenadjd.service  cli.mk  daemon.mk
src/: license.hpp
src/applet/: main.cpp  util.hpp
src/cli/: auto-ryzenadjctl.cpp
src/daemon/: auto-ryzenadj.cpp  main.cpp  util.hpp
